Testimonial alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1330,7 +1330,7 @@ p {
   height: 300px;
   padding: 3rem 2rem;
   display: grid;
-  grid-template-rows: 1fr max-content;
+  grid-template-rows: 70% 30%;
   border: 0.2px solid #b6b6b6;
   border-radius: 1rem;
   box-shadow: 0 1px 5px 0 #b6b6b6;
